# RB1-StyleTransfer

./: README.md
StyleTransfer/: CMakeLists.txt
StyleTransfer/conf/: gst_style_config.json
StyleTransfer/env/: hostapd.conf  udhcpd.conf
StyleTransfer/examples/: CMakeLists.txt  gst_style_test.cpp
StyleTransfer/gst_component/: CMakeLists.txt  appsrc2rtsp.hpp  appsrc2udpsink.hpp  appsrc_rtsp_test.cpp  appsrc_udp_test.cpp  camera2appsink.hpp  camera_test.cpp  easy_queue.hpp  gst-pipe_0.1.bb  opencv_rtsp_test.cpp  test.sdp  utils.hpp
StyleTransfer/inference/: CMakeLists.txt  delegate_tf.h  inference.h  inference_tf.cpp  inference_tf.hpp  settings.h  style_transfer_tf_test.cpp  utils.cc  utils.h  utils_impl.h
StyleTransfer/models/style/: artical_style_transfomer.txt  test.py
StyleTransfer/sh/: ap-wifi.sh  ap.sh  gst_cmd  ipkg_build.sh  multi-camera.sh  weston_dp_client
StyleTransfer/utils/: timeutil.h
doc/: QRB2210-StyleTransfer-demo-doc.docx  Video_description.txt
